--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <h1>not rendered</h1>
+    </div>
     <!--<div id="root">
         <h1>
             hello world using html!
@@ -19,12 +21,12 @@
         const root = document.getElementById("root");
         root.appendChild(heading);
     </script>-->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js">   
+    <!--<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js">   
     </script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-    </script>
+    </script>-->
     
     
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 </body>
 </html>
