--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </script>-->
     
     
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
